--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "libft"]
-	path = libft
-	url = git@github.com:puyma/42-libft.git
+[submodule "src/libft"]
+	path = src/libft
+	url = git@github.com:puyma/libft.git
+	branch = libft-vogsphere
